CONFIGURE_OSPRAY()
IF (OSPRAY_MPI)
	CONFIGURE_MPI()

	INCLUDE (${EMBREE_DIR}/common/cmake/ispc.cmake)
	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ospray)
	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ospray/include)
	
	ADD_EXECUTABLE(mpiTest${OSPRAY_EXE_SUFFIX} mpiTest)
	TARGET_LINK_LIBRARIES(mpiTest${OSPRAY_EXE_SUFFIX} ospray${OSPRAY_LIB_SUFFIX})

	ADD_LIBRARY(ospray_module_MPItest${OSPRAY_LIB_SUFFIX}
		module.cpp
		)
	TARGET_LINK_LIBRARIES(ospray_module_MPItest${OSPRAY_LIB_SUFFIX} ospray${OSPRAY_LIB_SUFFIX})
ENDIF(OSPRAY_MPI)
