CONFIGURE_OSPRAY()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ospray)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ospray/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/apps/util)
INCLUDE_DIRECTORIES_ISPC(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES_ISPC(${PROJECT_SOURCE_DIR}/ospray)
INCLUDE_DIRECTORIES_ISPC(${EMBREE_DIR}/include)

IF (NOT THIS_IS_MIC)
  ADD_EXECUTABLE(ospParticleViewer
    viewer.cpp
    model.cpp
    uintah.cpp
    )
  TARGET_LINK_LIBRARIES(ospParticleViewer ospray ospray_glut3d ospray_xml)
ENDIF()

